<resources>
    <string name="app_name">jianshen</string>
    <string name="hip">Hip</string>
    <string name="waist">Waist</string>
    <string name="thigh">Thigh</string>
    <string name="calf">Calf</string>
    <string name="welcome">Welcome to App</string>
    <string name="get_your_dream">Get Your Dream Body Now</string>
    <string name="No_net">No Net!</string>
    <string name="first_user_page_title">CHOOSE YOUR GENDER</string>
    <string name="first_user_page_content">Personalize worket program based \n on gender</string>
    <string name="first_user_page_female">Female</string>
    <string name="first_user_page_male">Male</string>
    <string name="second_user_page_title">CHOOSE YOUR GOAL</string>
    <string name="second_user_page_content">Help us understand what you need</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="keep_fit">Keep Fit</string>
    <string name="or">or</string>
    <string name="build_muscle">Build Muscle</string>
    <string name="third_user_page_title">CHOOSE YOUR FOCUS PART</string>
    <string name="third_user_page_content">Focus on target zone, save 30% of your time</string>
    <string name="whole_body">Whole Body</string>
    <string name="chest_butt">Chest/Butt</string>
    <string name="abs">Abs</string>
    <string name="arm">Arm</string>
    <string name="leg">Leg</string>
    <string name="third_user_page_lose_weight">People bodys fat is an entirety,
        \n we do not suggest you to
        \n lose weight for a single part.
        \n \n Try  </string>
    <string name="third_user_page_lose_weight_end">for\n a single part.</string>
    <string name="four_user_page_title">CHOOSE YOUR FITNESS LEVEL</string>
    <string name="four_user_page_content">Create workout plan that suits you best</string>
    <string name="beginner">Beginner</string>
    <string name="four_user_page_item_1_bottom">Just start exercising</string>
    <string name="intermediate">Intermediate</string>
    <string name="four_user_page_item_2_bottom">Do exercise 1-2 times a week</string>
    <string name="advanced">Advanced</string>
    <string name="four_user_page_item_3_bottom">Do exercise regularly, over 3 times a week</string>
    <string name="five_user_page_title">ENTER HEIGHT AND WEIGHT</string>
    <string name="five_user_page_content">Let us know you better to provide \n more targeted support for you.</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="next">Next</string>
    <string name="generate_plan">Generate Plan</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_chest">Your Chest</string>
    <string name="your_arm">Your Arm</string>
    <string name="your_hip">Your Hip</string>
    <string name="your_waist">Your Waist</string>
    <string name="your_thigh">Your Thigh</string>
    <string name="your_calf">Your Calf</string>
    <string name="build_progress_title">CREATING YOUR \n WORKOUT PLAN </string>
    <string name="build_progress_content_one">Personalize your workout plan \n for </string>
    <string name="build_progress_content_two">Select workouts for your </string>
    <string name="build_progress_content_three_start">Designing the training duration \n for</string>
    <string name="build_progress_content_three_end">body builders ...</string>
    <string name="build_progress_content_four">Adjusting the schedule for </string>
    <string name="build_progress_end_title">AND GET YOUR \n DREAM BODY</string>
    <string name="build_progress_end_content">Your personal plan is prepared! \n Let us do it !</string>
    <string name="start">Start</string>
    <string name="window_cancel">Cancel</string>
    <string name="window_save">Save</string>
    <string name="plan">PLAN</string>
    <string name="workout">WORKOUT</string>
    <string name="daily">DAILY</string>
    <string name="profile">PROFILE</string>
    <string name="three_week">3-WEEKS FITNESS</string>
    <string name="four_week">4-WEEKS FITNESS</string>
    <string name="complete">completed</string>
    <string name="week">WEEK</string>
    <string name="day_off">Day off !</string>
    <string name="day_work">Workout  today</string>
    <string name="unlock_all_plan">Unlock all workout plan</string>
    <string name="personalize_your_plan">Personalize \n your plan \n right now!</string>
    <string name="get_dream_body">Get your dream body</string>
    <string name="popular_program">Popular Program</string>
    <string name="try_now">Try Now</string>
    <string name="weeks">WEEKS</string>
    <string name="workouts">WORKOUTS</string>
    <string name="recommend">Recommended</string>
    <string name="my">My</string>
    <string name="abs_workout">Abs Workout</string>
    <string name="fat_burning">Fat Burning</string>
    <string name="stretch">Stretch</string>
    <string name="chest_workout">Chest Workout</string>
    <string name="warm_up">Warm Up</string>
    <string name="empty_now">Empty now!</string>
    <string name="get_you_like_work">Tab &#8194;&#8194; when you find the class you are \n interested in  so that you can \n add it to this page</string>
    <string name="start_seven_day">Start &#8194;&#8194;&#8194; Day Free Trial</string>
    <string name="get_access_all_programs">Get access to all workout programs</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="information">Information</string>
    <string name="favorite_workout">Favorite Workout</string>
    <string name="my_workout_program">My workout program</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="premium_now">You are \nPremium now !</string>
    <string name="premium_expired_on">You Premium will expired on </string>
    <string name="date">Date</string>
    <string name="chest">Chest</string>
    <string name="butt">Butt</string>
    <string name="record">Record</string>
    <string name="calendar">Calendar</string>
    <string name="data">Data</string>
    <string name="girth">Girth</string>
    <string name="history">History</string>
    <string name="bmi">BMI</string>
    <string name="edit">Edit</string>
    <string name="calories_burned">Calories burned, estimated (kcal)</string>
    <string-array name="week_string_array">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="kcal">Kcal</string>
    <string name="Duration">Duration</string>
    <string name="completed">Completed</string>
    <string name="high_knees">High Knees</string>
    <string name="introduction">Introduction</string>
    <string name="introduction_detail">To activate your abs through the most fundamental
 exercises. If you feel any pain or sourness in your b
ack, neck, and thighs when practicing other... </string>
    <string name="Equipment">Equipment</string>
    <string name="no_equipment">No Equipment</string>
    <string name="Exercises">Exercises</string>
    <string name="adjusted_your_plan">Your plan is just adjusted</string>
    <string name="add_favorite">Add to favorite</string>
    <string name="favorite">Favorite</string>
    <string name="downloading">Downloading</string>
    <string name="music_list">Music List</string>
    <string name="close">Close</string>
    <string name="rest">Rest</string>
    <string name="current_program">Current Program</string>
    <string name="training_days">Training Days :</string>
    <string name="minutes_perday">Minutes per day : </string>
    <string name="adjust_plan">Adjust &#8194;&#8194;Plan</string>
    <string name="goal">Goal</string>
    <string name="body_focus">Body Focus</string>
    <string name="difficulty">Difficulty</string>
    <string name="end_current_program">End Current Program</string>
    <string name="done">Done</string>
    <string name="your_plan_adjust">Your plan will be adjusted \n intermediately。</string>
    <string name="sure_end_program">Are you sure you want to \n end  this program?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="introduction_one">This is a </string>
    <string name="introduction_two"> &#8194;class which intended for  everyone. By completing this workout,it will take &#8194;</string>
    <string name="introduction_three">&#8194;and help you burn</string>
    <string name="Notice_before_workout">Notice Before Workout</string>
    <string name="notice_before_content">We suggest you to not eat much before workout, especially do not have indigestible food,  meat, and alcoho within 60 minutes before workout. You can eat appropriate carbohydrates \n\n
We suggest you to wear sportswear and sports shoes while fitting, which can not only improve sports performance, but also reduce sports risk.</string>
    <string name="Notice_While_workout">Notice While Workout</string>
    <string name="Notice_While_content">The load of exercise is depended on your body situation, try to not overload your capacity.\n\n
People will sweat a lot during fitness, so it is necessary to replenish water in time, drink a little of water each time, and drink multiple times. Please do not try to wait for thirst to drink.</string>
    <string name="Notice_after_workout">Notice After Workout</string>
    <string name="notice_after_content">You should rest for half an hour after training before take a shower. When taking a shower, the water temperature should not be too high in case it may decrease body immunity\n\n
-Aerobic training should start slowly and end slowly</string>
    <string name="introduction_bottom">This workout is not intended for you if \nyou are: </string>
    <string name="introduction_bottom_content">Are elderly (over 65 years old), pregenant, or\n disabled\n
Have diabets, cardio - and cerebrovascular\n diseases, lung diseases, or other metabolic\n diseases</string>
    <string name="minute">Minutes</string>
    <string name="search_course">Search workout you like</string>
    <string name="no_result_found">No Result Found</string>
    <string name="no_more_data">No More Data</string>
    <string name="refresh_data">Refresh Data...</string>
    <string name="loading">Loading...</string>
    <string name="keyword_null">Keyword is null!</string>
    <string name="course_null_data_try_again">No data for current course, please try again!</string>
    <string name="instruction">Instruction</string>
    <string name="end">End</string>
    <string name="continue_s">Continue</string>
    <string name="skip">Skip</string>
    <string name="take_quick">Take a Quick Break</string>
    <string name="please_to_next">You have completed this workout.\nLet us go next!</string>
    <string name="well_done">Well Done!</string>
    <string name="finish">Finish</string>
    <string name="start_next">Start The Next Action!</string>
    <string name="no_support_voice">No Support Voice</string>
    <string name="clear_download">Clear Download</string>
    <string name="select_kg_cm">Metric &amp; Imperial Units</string>
    <string name="voice_guide">Voice Guide</string>
    <string name="bg_music">Background Music</string>
    <string name="gender">Gender</string>
    <string name="action_unlock">Swipe right to unlock >></string>
    <string name="your_bmi">Your BMI is </string>
    <string name="we_recommend_program">,We\nrecommend the following\nprogram</string>
    <string name="bmi_one">Underweight\n&lt;18.5</string>
    <string name="bmi_two">Healthy\n18.5 -24.9</string>
    <string name="bmi_three">Overweight\n25 -29.9</string>
    <string name="bmi_four">Obesity\n&gt;30</string>
    <string name="plus_size_program">Plus size Program</string>
    <string name="recommend_28_up">Recommended for users with 28+ BMI</string>
</resources>