<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6">

        <ImageView
            android:id="@+id/select_position_back_img"
            android:layout_width="@dimen/dp_27"
            android:layout_height="@dimen/dp_27"
            android:src="@mipmap/back_page_grey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:background="@drawable/green_radius_2" />

            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:background="@drawable/green_radius_2" />

            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:background="@drawable/green_radius_15" />

            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:background="@drawable/grey_radius_2" />

            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:background="@drawable/grey_radius_2" />
        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/third_user_page_title"
        android:textColor="#ff121212"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/third_user_page_content"
        android:textColor="#ff71747b"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/select_position_select_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/select_position_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_46"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/select_position_radio_btn_1"
                android:layout_width="@dimen/dp_174"
                android:layout_height="@dimen/dp_54"
                android:background="@drawable/select_checked_15"
                android:button="@null"
                android:gravity="center"
                android:text="@string/whole_body"
                android:textColor="#ff676767"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/select_position_radio_btn_2"
                android:layout_width="@dimen/dp_174"
                android:layout_height="@dimen/dp_54"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/select_checked_15"
                android:button="@null"
                android:gravity="center"
                android:text="@string/chest_butt"
                android:textColor="#ff676767"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/select_position_radio_btn_3"
                android:layout_width="@dimen/dp_174"
                android:layout_height="@dimen/dp_54"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/select_checked_15"
                android:button="@null"
                android:gravity="center"
                android:text="@string/abs"
                android:textColor="#ff676767"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/select_position_radio_btn_4"
                android:layout_width="@dimen/dp_174"
                android:layout_height="@dimen/dp_54"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/select_checked_15"
                android:button="@null"
                android:gravity="center"
                android:text="@string/arm"
                android:textColor="#ff676767"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/select_position_radio_btn_5"
                android:layout_width="@dimen/dp_174"
                android:layout_height="@dimen/dp_54"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/select_checked_15"
                android:button="@null"
                android:gravity="center"
                android:text="@string/leg"
                android:textColor="#ff676767"
                android:textSize="17sp" />
        </RadioGroup>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_392"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_weight="1"
            android:src="@mipmap/icon_muscle" />
    </LinearLayout>

    <TextView
        android:id="@+id/select_position_lose_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="@string/third_user_page_lose_weight"
        android:textColor="#ff676767"
        android:textSize="17sp" />

</LinearLayout>