<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6">

        <ImageView
            android:id="@+id/bmi_grade_back_img"
            android:layout_width="@dimen/dp_27"
            android:layout_height="@dimen/dp_27"
            android:src="@mipmap/back_page_grey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">



            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:background="@drawable/green_radius_2" />

            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:background="@drawable/green_radius_2" />

            <View
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:background="@drawable/green_radius_2" />

        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/four_user_page_title"
        android:textColor="#ff121212"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/four_user_page_content"
        android:textColor="#ff71747b"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/bmi_grade_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_46"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/bmi_grade_radio_btn_one"
                android:layout_width="@dimen/dp_332"
                android:layout_height="@dimen/dp_79"
                android:button="@null"
                android:checked="false"
                android:background="@drawable/select_checked_15"/>
            <RadioButton
                android:id="@+id/bmi_grade_radio_btn_two"
                android:layout_width="@dimen/dp_332"
                android:layout_height="@dimen/dp_79"
                android:layout_marginTop="@dimen/dp_24"
                android:button="@null"
                android:background="@drawable/select_checked_15"/>
            <RadioButton
                android:id="@+id/bmi_grade_radio_btn_three"
                android:layout_width="@dimen/dp_332"
                android:layout_height="@dimen/dp_79"
                android:layout_marginTop="@dimen/dp_24"
                android:button="@null"
                android:background="@drawable/select_checked_15"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_46"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bmi_grade_lly_1"
                android:layout_width="@dimen/dp_332"
                android:layout_height="@dimen/dp_79"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/bmi_grade_tv_1_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="@string/beginner"
                    android:textColor="#ff676767"/>
                <TextView
                    android:id="@+id/bmi_grade_tv_1_btm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/four_user_page_item_1_bottom"
                    android:textColor="#676767"
                    android:textSize="@dimen/dp_15"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/bmi_grade_lly_2"
                android:layout_width="@dimen/dp_332"
                android:layout_height="@dimen/dp_79"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_24"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/bmi_grade_tv_2_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="@string/intermediate"
                    android:textColor="#ff676767"/>
                <TextView
                    android:id="@+id/bmi_grade_tv_2_btm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/four_user_page_item_2_bottom"
                    android:textColor="#676767"
                    android:textSize="@dimen/dp_15"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/bmi_grade_lly_3"
                android:layout_width="@dimen/dp_332"
                android:layout_height="@dimen/dp_79"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_24"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/bmi_grade_tv_3_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="@string/advanced"
                    android:textColor="#ff676767"/>
                <TextView
                    android:id="@+id/bmi_grade_tv_3_btm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/four_user_page_item_3_bottom"
                    android:textColor="#676767"
                    android:textSize="@dimen/dp_15"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>